fix some heights & spacings

--- a/src/app/Components/reroll-button/reroll-button.component.scss
+++ b/src/app/Components/reroll-button/reroll-button.component.scss
@@ -1,3 +1,8 @@
+:host {
+  @apply h-8;
+  @apply w-8;
+}
+
 button {
   transition: 0.005s;
   .wand-down {
